--- a/mysite/unicorn/templates/unicorn/tag_detail.html
+++ b/mysite/unicorn/templates/unicorn/tag_detail.html
@@ -13,7 +13,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<h3>{{tag.text}}</h3>
+			<h3>{{tag.slug}}</h3>
 			<p>{{tag.description}}</p>
 		</div>
 	</div>
