--- a/mysite/unicorn/templates/unicorn/article_list.html
+++ b/mysite/unicorn/templates/unicorn/article_list.html
@@ -15,7 +15,7 @@
 			    <ul>
 				    {% for article in article_list %}
 					    <li>
-					    	<h3><a href="/article/{{ article.slug }}/">{{ article.headline }}</a></h3>
+					    	<h3><a href="/articles/{{ article.slug }}/">{{ article.headline }}</a></h3>
 					    	<ul>
 					    		<li>Tags</li>
 					        {% for tag in article.tags.all %}
