basic routes, article service, templating

--- a/unicorn/src/app/article-list/article-list.component.html
+++ b/unicorn/src/app/article-list/article-list.component.html
@@ -1,5 +1,12 @@
   <ul>
     <li *ngFor="let article of articles">
+    <a href="#" [routerLink]="['/articles', article.slug]">
       {{article.headline}}
+      </a>
+      <ul>
+      	<li *ngFor="let author of article.authors">
+      		{{author.first_name}}, {{author.last_name}}
+      	</li> 	
+      </ul>
     </li>
   </ul>
